[gd_scene load_steps=2 format=3 uid="uid://c9x5m4k2v8n1p"]

[ext_resource type="Script" path="res://scripts/systems/AdvancedHUD.gd" id="1_7k9mx"]

[node name="AdvancedHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_7k9mx")

[node name="HealthContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 420.0
offset_bottom = -80.0

[node name="HealthBar" type="ProgressBar" parent="HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthContainer"]
layout_mode = 2
text = "100 / 100"
vertical_alignment = 1

[node name="MemoryContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -80.0

[node name="MemoryIcon" type="TextureRect" parent="MemoryContainer"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)

[node name="MemoryLabel" type="Label" parent="MemoryContainer"]
layout_mode = 2
text = "Memory Fragments: 0"
vertical_alignment = 1

[node name="LevelContainer" type="Panel" parent="."]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -15.0
offset_right = 140.0
offset_bottom = 15.0
text = "Ashen Courtyard - Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0

[node name="InventoryTitle" type="Label" parent="InventoryContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="InventorySlots" type="HBoxContainer" parent="InventoryContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MinimapContainer" type="Control" parent="."]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 230.0

[node name="MinimapTitle" type="Label" parent="MinimapContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = -5.0
text = "Minimap"
horizontal_alignment = 1

[node name="MinimapBackground" type="ColorRect" parent="MinimapContainer"]
layout_mode = 1
anchors_preset = 0
color = Color(0.1, 0.1, 0.2, 0.8)

[node name="PlayerDot" type="ColorRect" parent="MinimapContainer"]
layout_mode = 1
anchors_preset = 0
offset_right = 4.0
offset_bottom = 4.0
color = Color(0, 1, 1, 1)

[node name="EnemyDots" type="Node2D" parent="MinimapContainer"]

[node name="RoomOutlines" type="Node2D" parent="MinimapContainer"]